--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
           </div>
 
           <div style="flex:1;min-width:260px">
+            <h4>Companies (Join / Transfer)</h4>
+            <div id="companyList" class="panel" style="padding:10px;border-radius:8px;max-height:160px;overflow:auto"></div>
+          </div>
+
+          <div style="flex:1;min-width:260px">
             <h4>Leaderboard (local / placeholder)</h4>
             <div id="leaderboard" class="panel" style="padding:10px;border-radius:8px;max-height:160px;overflow:auto"></div>
           </div>
@@ -107,6 +112,7 @@
   <!-- Ores & server data files (ores.js, data.js) are loaded by script.js if present -->
   <script src="ores.js"></script>
   <script src="data.js"></script>
+  <script src="webhooks.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
