--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Mining Order Board — Final Sandbox</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css?v=2"/>
 </head>
 <body>
   <div class="wrap">
@@ -140,10 +140,10 @@
   </div>
 
   <!-- host/webhooks/ores/data -->
-  <script src="ores.js"></script>
-  <script src="data.js"></script>
-  <script src="webhooks.js"></script>
-  <script src="script.js"></script>
+  <script src="ores.js?v=2"></script>
+  <script src="data.js?v=2"></script>
+  <script src="webhooks.js?v=2"></script>
+  <script src="script.js?v=2"></script>
 
   <!-- subtle host button -->
   <button id="hostBtn" class="host-btn" aria-hidden="true">host</button>
